--- a/Activity/c2_2_21_excise2_intent/src/main/res/layout/activity_main.xml
+++ b/Activity/c2_2_21_excise2_intent/src/main/res/layout/activity_main.xml
@@ -9,31 +9,43 @@
    <Button
        android:id="@+id/view"
        android:text="view"
+       android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
+   <Button
+     android:id="@+id/dial"
+     android:text="dial"
+     android:textAllCaps="false"
+     android:layout_width="wrap_content"
+     android:layout_height="wrap_content" />
     <Button
         android:id="@+id/call"
         android:text="call"
+        android:textAllCaps="false"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <Button
         android:id="@+id/sms"
         android:text="sms"
+        android:textAllCaps="false"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <Button
         android:id="@+id/share"
         android:text="share"
+        android:textAllCaps="false"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <Button
         android:id="@+id/goReader"
         android:text="goReader"
+        android:textAllCaps="false"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <Button
         android:id="@+id/startActivity"
         android:text="start"
+        android:textAllCaps="false"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </LinearLayout>
